syntax = "proto3";

option csharp_namespace = "SnackTime.MediaServer.Service.Episode";

package snacktime.episode.service;

import "proto/media.proto";

message GetRecommendedBySeriesIdRequest{
    int32 seriesId = 1;
}
message GetRecommendedBySeriesIdResponse {
    snacktime.media.Episode episode = 1;
}
